/*
 * $Id: ChangeLog,v 1.6575 2009/09/12 18:01:43 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-09-12 22:48 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/ct/ctnet.c
    ! Use const char * for some Set values.
  * source/rtl/filesys.c
  * source/vm/hvm.c
    ! Moved HB_TEST_CANCEL_ENABLE_ASYN and HB_DISABLE_ASYN_CANC to hb_vmLock()
      and hb_vmLock() respectively, to fix building under Windows.
  * source/rtl/gtwvt/gtwvt.c
    ! Added a hack to allow access to internal hb_stack_ready variable.

2009-09-12 22:00 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * include/hbapi.h
  * source/rtl/oemansi.c
  * source/rtl/readexit.c
  * source/rtl/readins.c
  * source/rtl/setkey.c
    ! Removed extraneous #include "hbstack.h".
  * include/hbapierr.h
    ! Added a missing #include "thread.h".
  * source/rdd/wafunc.c
  * source/rdd/nulsys/nulsys.c
    ! Added a missing #include "hbstack.h".
  * include/hbapirdd.h
    ! Protected hb_rddWaShutDown(), hb_rddWaInit(),
      hb_rddChangeSetWorkareasShared() with _HB_API_INTERNAL_ and
      _HB_SET_INTERNAL_.
  * include/hbset.h
  * source/rtl/set.c
  * source/rtl/bkgtsks.c
  * source/rtl/console.c
  * source/rtl/hbserv.c
  * source/rtl/math.c
  * source/vm/initexit.c
    ! Protected HB_SET_STRUCT, hb_setInitialize(), and hb_setRelease() with
      _HB_SET_INTERNAL_ || _HB_API_INTERNAL_.
    ! Removed hb_set, hb_set_ptr, hb_GetSetStructPtr(), HB_SET_STACK.
    % Some optimizations.
    ! Use hb_stackSetStruct() for internal access to Set data.
  * include/hbstack.h
  * include/thread.h
  * source/vm/estack.c
  * source/vm/thread.c
    * Moved hb_set struct to the stack.
    + Added hb_stackSetStruct() for internal access to Set data. Has no
      overhead when HB_STACK_MACROS is used in ST mode.
  * contrib/rdd_ads/ads1.c